# strava-tracker

./: .gitignore  CLAUDE.md  Procfile  README.md  config.toml  main.py  pyproject.toml  requirements.txt
src/: auth_strava.py  config.py  data_processing.py  fitness_client.py  llm_client.py  llm_provider.py  logger.py  search_models.py  strava_client.py  telegram_bot.py  test_pipeline.py
tests/: test_data_processing.py  test_llm_client.py  test_strava_client.py
